Updated the demo script to match the notebook demo and added emojis in notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Start of by importing some of the basic stuff\n",
+    "\n",
     "%matplotlib qt\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -36,12 +38,13 @@
     }
    ],
    "source": [
+    "# Read in the dataset\n",
     "df = pd.read_csv('data/WPP2022_Demographic_Indicators_Medium.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -63,12 +66,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Soo many columns in the table 🙀\n",
     "df.columns"
    ]
   },
@@ -77,6 +81,45 @@
    "metadata": {},
    "source": [
     "Columns of interest TPopulation1Jan, Location, LocTypeName"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['World', 'Sub-Saharan Africa', 'Northern Africa and Western Asia',\n",
+       "       'Central and Southern Asia', 'Eastern and South-Eastern Asia',\n",
+       "       'Latin America and the Caribbean',\n",
+       "       'Oceania (excluding Australia and New Zealand)',\n",
+       "       'Australia/New Zealand', 'Europe and Northern America',\n",
+       "       'More developed regions', 'Less developed regions',\n",
+       "       'Least developed countries',\n",
+       "       'Less developed regions, excluding least developed countries',\n",
+       "       'Less developed regions, excluding China',\n",
+       "       'Land-locked Developing Countries (LLDC)',\n",
+       "       'Small Island Developing States (SIDS)', 'High-income countries',\n",
+       "       'Middle-income countries', 'Upper-middle-income countries',\n",
+       "       'Lower-middle-income countries'], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Location.unique()[:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Those aren't countries 🤔"
    ]
   },
   {
@@ -113,12 +156,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For this demo I'm only interested in the population stats by country\n",
     "df2 = df.loc[df.LocTypeName=='Country/Area']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -127,71 +171,24 @@
        "array(['Burundi', 'Comoros', 'Djibouti', 'Eritrea', 'Ethiopia', 'Kenya',\n",
        "       'Madagascar', 'Malawi', 'Mauritius', 'Mayotte', 'Mozambique',\n",
        "       'Réunion', 'Rwanda', 'Seychelles', 'Somalia', 'South Sudan',\n",
-       "       'Uganda', 'United Republic of Tanzania', 'Zambia', 'Zimbabwe',\n",
-       "       'Angola', 'Cameroon', 'Central African Republic', 'Chad', 'Congo',\n",
-       "       'Democratic Republic of the Congo', 'Equatorial Guinea', 'Gabon',\n",
-       "       'Sao Tome and Principe', 'Algeria', 'Egypt', 'Libya', 'Morocco',\n",
-       "       'Sudan', 'Tunisia', 'Western Sahara', 'Botswana', 'Eswatini',\n",
-       "       'Lesotho', 'Namibia', 'South Africa', 'Benin', 'Burkina Faso',\n",
-       "       'Cabo Verde', \"Côte d'Ivoire\", 'Gambia', 'Ghana', 'Guinea',\n",
-       "       'Guinea-Bissau', 'Liberia', 'Mali', 'Mauritania', 'Niger',\n",
-       "       'Nigeria', 'Saint Helena', 'Senegal', 'Sierra Leone', 'Togo',\n",
-       "       'Kazakhstan', 'Kyrgyzstan', 'Tajikistan', 'Turkmenistan',\n",
-       "       'Uzbekistan', 'China', 'China, Hong Kong SAR', 'China, Macao SAR',\n",
-       "       'China, Taiwan Province of China',\n",
-       "       \"Dem. People's Republic of Korea\", 'Japan', 'Mongolia',\n",
-       "       'Republic of Korea', 'Afghanistan', 'Bangladesh', 'Bhutan',\n",
-       "       'India', 'Iran (Islamic Republic of)', 'Maldives', 'Nepal',\n",
-       "       'Pakistan', 'Sri Lanka', 'Brunei Darussalam', 'Cambodia',\n",
-       "       'Indonesia', \"Lao People's Democratic Republic\", 'Malaysia',\n",
-       "       'Myanmar', 'Philippines', 'Singapore', 'Thailand', 'Timor-Leste',\n",
-       "       'Viet Nam', 'Armenia', 'Azerbaijan', 'Bahrain', 'Cyprus',\n",
-       "       'Georgia', 'Iraq', 'Israel', 'Jordan', 'Kuwait', 'Lebanon', 'Oman',\n",
-       "       'Qatar', 'Saudi Arabia', 'State of Palestine',\n",
-       "       'Syrian Arab Republic', 'Türkiye', 'United Arab Emirates', 'Yemen',\n",
-       "       'Belarus', 'Bulgaria', 'Czechia', 'Hungary', 'Poland',\n",
-       "       'Republic of Moldova', 'Romania', 'Russian Federation', 'Slovakia',\n",
-       "       'Ukraine', 'Denmark', 'Estonia', 'Faroe Islands', 'Finland',\n",
-       "       'Guernsey', 'Iceland', 'Ireland', 'Isle of Man', 'Jersey',\n",
-       "       'Latvia', 'Lithuania', 'Norway', 'Sweden', 'United Kingdom',\n",
-       "       'Albania', 'Andorra', 'Bosnia and Herzegovina', 'Croatia',\n",
-       "       'Gibraltar', 'Greece', 'Holy See', 'Italy',\n",
-       "       'Kosovo (under UNSC res. 1244)', 'Malta', 'Montenegro',\n",
-       "       'North Macedonia', 'Portugal', 'San Marino', 'Serbia', 'Slovenia',\n",
-       "       'Spain', 'Austria', 'Belgium', 'France', 'Germany',\n",
-       "       'Liechtenstein', 'Luxembourg', 'Monaco', 'Netherlands',\n",
-       "       'Switzerland', 'Anguilla', 'Antigua and Barbuda', 'Aruba',\n",
-       "       'Bahamas', 'Barbados', 'Bonaire, Sint Eustatius and Saba',\n",
-       "       'British Virgin Islands', 'Cayman Islands', 'Cuba', 'Curaçao',\n",
-       "       'Dominica', 'Dominican Republic', 'Grenada', 'Guadeloupe', 'Haiti',\n",
-       "       'Jamaica', 'Martinique', 'Montserrat', 'Puerto Rico',\n",
-       "       'Saint Barthélemy', 'Saint Kitts and Nevis', 'Saint Lucia',\n",
-       "       'Saint Martin (French part)', 'Saint Vincent and the Grenadines',\n",
-       "       'Sint Maarten (Dutch part)', 'Trinidad and Tobago',\n",
-       "       'Turks and Caicos Islands', 'United States Virgin Islands',\n",
-       "       'Belize', 'Costa Rica', 'El Salvador', 'Guatemala', 'Honduras',\n",
-       "       'Mexico', 'Nicaragua', 'Panama', 'Argentina',\n",
-       "       'Bolivia (Plurinational State of)', 'Brazil', 'Chile', 'Colombia',\n",
-       "       'Ecuador', 'Falkland Islands (Malvinas)', 'French Guiana',\n",
-       "       'Guyana', 'Paraguay', 'Peru', 'Suriname', 'Uruguay',\n",
-       "       'Venezuela (Bolivarian Republic of)', 'Bermuda', 'Canada',\n",
-       "       'Greenland', 'Saint Pierre and Miquelon',\n",
-       "       'United States of America', 'Australia', 'New Zealand', 'Fiji',\n",
-       "       'New Caledonia', 'Papua New Guinea', 'Solomon Islands', 'Vanuatu',\n",
-       "       'Guam', 'Kiribati', 'Marshall Islands',\n",
-       "       'Micronesia (Fed. States of)', 'Nauru', 'Northern Mariana Islands',\n",
-       "       'Palau', 'American Samoa', 'Cook Islands', 'French Polynesia',\n",
-       "       'Niue', 'Samoa', 'Tokelau', 'Tonga', 'Tuvalu',\n",
-       "       'Wallis and Futuna Islands'], dtype=object)"
+       "       'Uganda', 'United Republic of Tanzania', 'Zambia', 'Zimbabwe'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.Location.unique()"
+    "df2.Location.unique()[:20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's better"
    ]
   },
   {
